// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostBodyAdditionalContent > with a YouTube video > should not render content when isEmbedVisible is false 1`] = `
<div>
  <div>
    <button
      aria-label="Toggle Embed Visibility"
      class="style--none post__embed-visibility color--link pull-left"
      data-expanded="false"
    />
    <span>
      some children
    </span>
  </div>
</div>
`;

exports[`PostBodyAdditionalContent > with a YouTube video > should render correctly 1`] = `
<div>
  <div>
    <button
      aria-label="Toggle Embed Visibility"
      class="style--none post__embed-visibility color--link pull-left"
      data-expanded="true"
    />
    <span>
      some children
    </span>
    <div
      class="post__embed-container"
    >
      <div>
        <h4>
          <span
            class="video-type"
          >
            YouTube - 
          </span>
          <span
            class="video-title"
          >
            <a
              href="https://www.youtube.com/watch?v=d-YO3v-wJts"
              location="youtube_video"
              rel="noopener noreferrer"
              target="_blank"
            >
              unknown
            </a>
          </span>
        </h4>
        <div
          class="video-div embed-responsive-item"
        >
          <div
            aria-label="Play unknown on YouTube"
            class="video-thumbnail__container"
            role="button"
            tabindex="0"
          >
            <img
              alt="Thumbnail for unknown on YouTube"
              class="video-thumbnail"
              src="https://img.youtube.com/vi/d-YO3v-wJts/maxresdefault.jpg"
            />
            <div
              aria-label="Play video"
              class="play-button"
              role="presentation"
            >
              <i
                aria-hidden="true"
                class="icon-play"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostBodyAdditionalContent > with a YouTube video > should render the toggle after a message containing more than just a link 1`] = `
<div>
  <div>
    <span>
      some children
    </span>
    <button
      aria-label="Toggle Embed Visibility"
      class="style--none post__embed-visibility color--link "
      data-expanded="true"
    />
    <div
      class="post__embed-container"
    >
      <div>
        <h4>
          <span
            class="video-type"
          >
            YouTube - 
          </span>
          <span
            class="video-title"
          >
            <a
              href="https://www.youtube.com/watch?v=d-YO3v-wJts"
              location="youtube_video"
              rel="noopener noreferrer"
              target="_blank"
            >
              unknown
            </a>
          </span>
        </h4>
        <div
          class="video-div embed-responsive-item"
        >
          <div
            aria-label="Play unknown on YouTube"
            class="video-thumbnail__container"
            role="button"
            tabindex="0"
          >
            <img
              alt="Thumbnail for unknown on YouTube"
              class="video-thumbnail"
              src="https://img.youtube.com/vi/d-YO3v-wJts/maxresdefault.jpg"
            />
            <div
              aria-label="Play video"
              class="play-button"
              role="presentation"
            >
              <i
                aria-hidden="true"
                class="icon-play"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostBodyAdditionalContent > with a message attachment > should render content when isEmbedVisible is false 1`] = `
<div>
  <div>
    <span>
      some children
    </span>
    <div
      class="attachment__list"
      id="messageAttachmentList_post_id_1"
    />
  </div>
</div>
`;

exports[`PostBodyAdditionalContent > with a message attachment > should render correctly 1`] = `
<div>
  <div>
    <span>
      some children
    </span>
    <div
      class="attachment__list"
      id="messageAttachmentList_post_id_1"
    />
  </div>
</div>
`;

exports[`PostBodyAdditionalContent > with a normal link > Should render nothing if the plugin matches but isEmbedVisible is false 1`] = `
<div>
  <div>
    <span>
      some children
    </span>
  </div>
</div>
`;

exports[`PostBodyAdditionalContent > with a normal link > Should render nothing if the registered plugins don't match 1`] = `
<div>
  <div>
    <span>
      some children
    </span>
  </div>
</div>
`;

exports[`PostBodyAdditionalContent > with a normal link > Should render the plugin component if it matches and is not toggeable 1`] = `
<div>
  <div>
    <span>
      some children
    </span>
    <div
      data-testid="embed-mp3"
    >
      MP3 Embed
    </div>
  </div>
</div>
`;

exports[`PostBodyAdditionalContent > with a normal link > Should render the plugin component if it matches and is toggeable 1`] = `
<div>
  <div>
    <button
      aria-label="Toggle Embed Visibility"
      class="style--none post__embed-visibility color--link pull-left"
      data-expanded="true"
    />
    <span>
      some children
    </span>
    <div
      data-testid="embed-mp3"
    >
      MP3 Embed
    </div>
  </div>
</div>
`;

exports[`PostBodyAdditionalContent > with a permalinklink > Render permalink preview 1`] = `
<div>
  <div>
    <span>
      some children
    </span>
  </div>
</div>
`;

exports[`PostBodyAdditionalContent > with a permalinklink > Render permalink preview with no data 1`] = `
<div>
  <div>
    <span>
      some children
    </span>
  </div>
</div>
`;

exports[`PostBodyAdditionalContent > with an image preview > should render correctly 1`] = `
<div>
  <div>
    <button
      aria-label="Toggle Embed Visibility"
      class="style--none post__embed-visibility color--link pull-left"
      data-expanded="true"
    />
    <span>
      some children
    </span>
    <div
      class="post__embed-container"
    >
      <div
        class="file-preview__button"
        style="display: inline-block;"
      >
        <figure
          class="image-loaded-container"
        >
          <img
            aria-label="file thumbnail"
            class="img-div attachment__image cursor--pointer"
            src="https://example.com/image.png"
            tabindex="0"
          />
          <span
            class="image-preview-utility-buttons-container image-preview-utility-buttons-container--small-image image-preview-utility-buttons-container--small-image-no-copy-button"
          >
            <button
              aria-label="Copy link"
              class="style--none size-aware-image__copy_link"
            >
              <svg
                class="style--none"
                fill="currentColor"
                height="20"
                version="1.1"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.59,13.41C11,13.8 11,14.44 10.59,14.83C10.2,15.22 9.56,15.22 9.17,14.83C7.22,12.88 7.22,9.71 9.17,7.76V7.76L12.71,4.22C14.66,2.27 17.83,2.27 19.78,4.22C21.73,6.17 21.73,9.34 19.78,11.29L18.29,12.78C18.3,11.96 18.17,11.14 17.89,10.36L18.36,9.88C19.54,8.71 19.54,6.81 18.36,5.64C17.19,4.46 15.29,4.46 14.12,5.64L10.59,9.17C9.41,10.34 9.41,12.24 10.59,13.41M13.41,9.17C13.8,8.78 14.44,8.78 14.83,9.17C16.78,11.12 16.78,14.29 14.83,16.24V16.24L11.29,19.78C9.34,21.73 6.17,21.73 4.22,19.78C2.27,17.83 2.27,14.66 4.22,12.71L5.71,11.22C5.7,12.04 5.83,12.86 6.11,13.65L5.64,14.12C4.46,15.29 4.46,17.19 5.64,18.36C6.81,19.54 8.71,19.54 9.88,18.36L13.41,14.83C14.59,13.66 14.59,11.76 13.41,10.59C13,10.2 13,9.56 13.41,9.17Z"
                />
              </svg>
            </button>
            <a
              aria-label="Download"
              class="style--none size-aware-image__download"
              download=""
              href="https://example.com/image.png"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                class="style--none"
                fill="currentColor"
                height="20"
                version="1.1"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19,18H5v2h14V18z M11,2h2v10.2l4.5-4.5l1.4,1.4L12,16L5.1,9.1l1.4-1.4l4.5,4.5V2z"
                />
              </svg>
            </a>
          </span>
        </figure>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostBodyAdditionalContent > with an image preview > should render the toggle after a message containing more than just a link 1`] = `
<div>
  <div>
    <span>
      some children
    </span>
    <button
      aria-label="Toggle Embed Visibility"
      class="style--none post__embed-visibility color--link "
      data-expanded="true"
    />
    <div
      class="post__embed-container"
    >
      <div
        class="file-preview__button"
        style="display: inline-block;"
      >
        <figure
          class="image-loaded-container"
        >
          <img
            aria-label="file thumbnail"
            class="img-div attachment__image cursor--pointer"
            src="https://example.com/image.png"
            tabindex="0"
          />
          <span
            class="image-preview-utility-buttons-container image-preview-utility-buttons-container--small-image image-preview-utility-buttons-container--small-image-no-copy-button"
          >
            <button
              aria-label="Copy link"
              class="style--none size-aware-image__copy_link"
            >
              <svg
                class="style--none"
                fill="currentColor"
                height="20"
                version="1.1"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.59,13.41C11,13.8 11,14.44 10.59,14.83C10.2,15.22 9.56,15.22 9.17,14.83C7.22,12.88 7.22,9.71 9.17,7.76V7.76L12.71,4.22C14.66,2.27 17.83,2.27 19.78,4.22C21.73,6.17 21.73,9.34 19.78,11.29L18.29,12.78C18.3,11.96 18.17,11.14 17.89,10.36L18.36,9.88C19.54,8.71 19.54,6.81 18.36,5.64C17.19,4.46 15.29,4.46 14.12,5.64L10.59,9.17C9.41,10.34 9.41,12.24 10.59,13.41M13.41,9.17C13.8,8.78 14.44,8.78 14.83,9.17C16.78,11.12 16.78,14.29 14.83,16.24V16.24L11.29,19.78C9.34,21.73 6.17,21.73 4.22,19.78C2.27,17.83 2.27,14.66 4.22,12.71L5.71,11.22C5.7,12.04 5.83,12.86 6.11,13.65L5.64,14.12C4.46,15.29 4.46,17.19 5.64,18.36C6.81,19.54 8.71,19.54 9.88,18.36L13.41,14.83C14.59,13.66 14.59,11.76 13.41,10.59C13,10.2 13,9.56 13.41,9.17Z"
                />
              </svg>
            </button>
            <a
              aria-label="Download"
              class="style--none size-aware-image__download"
              download=""
              href="https://example.com/image.png"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                class="style--none"
                fill="currentColor"
                height="20"
                version="1.1"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19,18H5v2h14V18z M11,2h2v10.2l4.5-4.5l1.4,1.4L12,16L5.1,9.1l1.4-1.4l4.5,4.5V2z"
                />
              </svg>
            </a>
          </span>
        </figure>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostBodyAdditionalContent > with an opengraph preview > should render content when isEmbedVisible is false 1`] = `
<div>
  <div>
    <span>
      some children
    </span>
  </div>
</div>
`;

exports[`PostBodyAdditionalContent > with an opengraph preview > should render correctly 1`] = `
<div>
  <div>
    <span>
      some children
    </span>
  </div>
</div>
`;

exports[`PostBodyAdditionalContent > with an opengraph preview > should render the toggle after a message containing more than just a link 1`] = `
<div>
  <div>
    <span>
      some children
    </span>
  </div>
</div>
`;
